k8s/auth-api/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: auth-api
spec:
  type: ClusterIP
  ports:
    - port: 80
      targetPort: 3000
  selector:
    app: auth-api
